# titanic

./: .gitignore  README.md  Titanic.ipynb  pyproject.toml
tests/: conftest.py  test_clean.py
titanic/: clean.py
