[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["Oscar Barlow <oscar.barlow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^0.24.2"
jupyterlab = "^3.0.16"
pandas = "^1.3.0"
numpy = "^1.21.0"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
